<resources>
    <string name="app_name">Game Backlog</string>
    <string name="action_settings">Settings</string>
    <string name="release_date">Release: %1s</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title">Title</string>
    <string name="platform">Platform</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="delete">Delete all games</string>
    <string name="undo">undo</string>
    <string name="all_empty">Please enter all the fields</string>
</resources>
